# git-good-bench

./: .gitignore  Dockerfile  README.md  pyproject.toml
agent_work_dir/: sequence_editor.sh
src/agent_client/: run_agent_client.py
src/agent_client/data/: git_dataset_provider.py  prompt_provider.py  yt_connection_manager.py
src/agent_client/environment/: docker_manager.py  evaluator.py  scenario_environment_manager.py  scenario_type.py  terminal_access_tool_provider.py
src/agent_client/utils/: available_context.py
src/data_processing_scripts/: downsample_dataset.py  mappers.py  schemas.py  yt_maintenance_utils.py
src/notebooks/: analyze_dataset.ipynb  evaluation.ipynb
src/repository_data_scraper/: main.py  repository_data_scraper.py
src/test/: test_scrape.py  test_update_accumulator_with.py
