[project]
name = "vcs-agent"
version = "0.1.0"
description = "Benchmark VCS scenarios for AI Agents and baseline implementation"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "docker>=7.1.0",
    "coverage>=7.6.4",
    "pandas>=2.2.3",
    "ytsaurus-client~=0.13.20",
    "ytsaurus-yson~=0.4.9",
    "matplotlib~=3.9.3",
    "notebook>=7.3.2",
    "jupyterlab>=4.3.5",
    "seaborn>=0.13.2",
    "gitpython>=3.1.44",
]